<resources>
    <string name="app_name">PetNet</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="not_valid_email">Entered email is not valid</string>
    <string name="password_not_valid">Password should be more than 6 characters</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="name_empty">Full name is empty</string>
    <string name="no_is_not_valid">Mobile no is not valid</string>
    <string name="email_not_valid">Email is not valid</string>
    <string name="mobile_no">Mobile No</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="submit">Submit</string>
    <string name="resend">Resend</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_title">Forgot Password</string>

    <string name="email_sent">Email sent. Please check your mail to reset password.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_account">Account</string>
    <string name="title_notifications">Notifications</string>
    <string name="use_your_current_location">Use your current location</string>
    <string name="get_location">Get location</string>
    <string name="adoption">Adoption</string>
    <string name="price">Price</string>
    <string name="select_species">Select species</string>
    <string name="log_out">Log out</string>
    <string name="find_your_best_pet">Find your best pet</string>
    <string name="your_true_companion_for_life">Your true companion for life</string>
    <string name="already_have_an_account_log_in">Already have an account?<font><b>Log in</b></font></string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="create_your_account">Create your account</string>
    <string name="username">Username</string>
    <string name="i_agree_to_terms_amp_condition_nand_privacy_policy"><![CDATA[I agree to Terms & Condition\nand Privacy Policy]]></string>
    <string name="type_here">Type here</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="enter_your_email_address_we_will_send_you_link_to_reset_the_password">Enter your email address we will send you link to reset the password</string>
    <string name="phone_verification">Phone Verification</string>
    <string name="enter_your_phone_number_to_receive_verification_code">Enter your phone number to receive verification code</string>
    <string name="enter_6_digit_verification_that_sent">Enter 6 digit verification that sent to +91%1$s</string>
    <string name="skip_for_now"><![CDATA[Skip for now >]]></string>

    <string-array name="planets_array">
        <item>Dog</item>
        <item>Cat</item>
    </string-array>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="select_it_manually"><u>Select it Manually</u></string>
    <string name="phone_number">Phone Number</string>
    <string name="_91">+91</string>
    <string name="dash">-</string>
    <string name="favourite">Favourite</string>
    <string name="notification">Notification</string>
    <string name="user">User</string>
</resources>