<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.views.auth.SignUpFragment">

    <ImageView
        android:id="@+id/backBtnIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_20x"
        android:background="@drawable/dim_primary_bg"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTV"
        style="@style/TextAppearance.PetNet.Headline5.PoppinsBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_20x"
        android:text="@string/phone_verification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backBtnIV" />

    <ImageView
        android:id="@+id/loginIV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/phone_verification_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTV" />

    <TextView
        android:id="@+id/emailTV"
        style="@style/TextAppearance.PetNet.Body1.PoppinsMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_60x"
        android:text="@string/enter_your_phone_number_to_receive_verification_code"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginIV" />
    <TextView
        android:id="@+id/countryCodeTV"
        style="@style/Widget.PetNet.EditText"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_60x"
        android:paddingStart="@dimen/size_12x"
        android:paddingEnd="@dimen/size_12x"
        android:background="@drawable/country_code_bg"
        android:layout_marginTop="@dimen/size_20x"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailTV"
        android:text="@string/_91" />
    <EditText
        android:id="@+id/phoneET"
        style="@style/Widget.PetNet.EditText"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_60x"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:maxLength="10"
        android:paddingStart="@dimen/size_12x"
        android:paddingEnd="@dimen/size_12x"
        android:background="@drawable/phone_bg"
        android:layout_marginTop="@dimen/size_20x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/countryCodeTV"
        app:layout_constraintTop_toBottomOf="@id/emailTV"
        tools:text="9425578735" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitBtn"
        style="@style/Widget.PetNet.MaterialButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_60x"
        android:layout_marginTop="@dimen/size_30x"
        android:text="@string/submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneET" />
    <TextView
        android:id="@+id/skipTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip_for_now"
        app:layout_constraintTop_toBottomOf="@id/submitBtn"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/size_24x"
        style="@style/TextAppearance.PetNet.Body1.PoppinsSemiBold"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>