<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.views.auth.SignUpFragment">

  <ImageView
      android:id="@+id/backBtnIV"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toTopOf="parent"
      android:background="@drawable/dim_primary_bg"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginTop="@dimen/size_20x"
      android:src="@drawable/ic_back_arrow"/>
  <TextView
      android:id="@+id/titleTV"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/backBtnIV"
      app:layout_constraintStart_toStartOf="parent"
      android:text="@string/create_your_account"
      style="@style/TextAppearance.PetNet.Headline5.PoppinsBold"
      android:layout_marginTop="@dimen/size_20x"/>
  <TextView
      android:id="@+id/usernameTV"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/titleTV"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginTop="@dimen/size_24x"
      android:text="@string/username"
      style="@style/TextAppearance.PetNet.Body1.PoppinsMedium"/>
<!--  <com.google.android.material.textfield.TextInputLayout-->
<!--      android:id="@+id/userNameIL"-->
<!--      android:layout_width="match_parent"-->
<!--      android:layout_height="70dp"-->
<!--      android:hint="@string/username"-->
<!--      app:layout_constraintTop_toBottomOf="@id/titleTV"-->
<!--      app:layout_constraintStart_toStartOf="parent"-->
<!--      app:backgroundTint="@null"-->
<!--      app:layout_constraintEnd_toEndOf="parent">-->
<!--    <com.google.android.material.textfield.TextInputEditText-->
<!--        android:id="@+id/usernameET"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        style="@style/Widget.PetNet.EditText"-->
<!--        />-->
<!--  </com.google.android.material.textfield.TextInputLayout>-->
  <EditText
      android:id="@+id/usernameET"
      android:layout_width="0dp"
      android:layout_height="@dimen/size_60x"
      app:layout_constraintTop_toBottomOf="@id/usernameTV"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      tools:text="Pramesh"
      android:hint="@string/type_here"
      android:paddingStart="@dimen/size_12x"
      android:paddingEnd="@dimen/size_12x"
      style="@style/Widget.PetNet.EditText"
      android:inputType="text" />
  <TextView
      android:id="@+id/emailTV"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/usernameET"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginTop="@dimen/size_20x"
      android:text="@string/email"
      style="@style/TextAppearance.PetNet.Body1.PoppinsMedium"/>
  <EditText
      android:id="@+id/emailET"
      android:layout_width="0dp"
      android:layout_height="@dimen/size_60x"
      app:layout_constraintTop_toBottomOf="@id/emailTV"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      tools:text="prameshsingh2411@gmail.com"
      android:paddingStart="@dimen/size_12x"
      android:hint="@string/type_here"
      android:paddingEnd="@dimen/size_12x"
      style="@style/Widget.PetNet.EditText"
      android:inputType="textWebEmailAddress" />
  <TextView
      android:id="@+id/passwordTV"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/emailET"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginTop="@dimen/size_20x"
      android:text="@string/password"
      style="@style/TextAppearance.PetNet.Body1.PoppinsMedium"/>
  <EditText
      android:id="@+id/passwordET"
      android:layout_width="0dp"
      android:layout_height="@dimen/size_60x"
      app:layout_constraintTop_toBottomOf="@id/passwordTV"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      tools:text="prameshsingh2411@gmail.com"
      android:paddingStart="@dimen/size_12x"
      android:paddingEnd="@dimen/size_12x"
      android:hint="@string/type_here"
      style="@style/Widget.PetNet.EditText"
      android:inputType="textWebPassword"
      />
  <CheckBox
      android:id="@+id/termsAndConditionCB"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/passwordET"
      app:backgroundTint="?attr/colorOnPrimary"
      android:lineSpacingExtra="@dimen/size_5x"
      android:gravity="top"
      style="@style/Widget.PetNet.CheckBox"
      android:checked="true"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginTop="@dimen/size_24x"
      android:text="@string/i_agree_to_terms_amp_condition_nand_privacy_policy"
      />
  <com.google.android.material.button.MaterialButton
      android:id="@+id/createAccountBtn"
      android:layout_width="match_parent"
      android:layout_height="@dimen/size_60x"
      style="@style/Widget.PetNet.MaterialButton"
      app:layout_constraintTop_toBottomOf="@id/termsAndConditionCB"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginTop="@dimen/size_24x"
      android:text="@string/create_your_account"/>
  <TextView
      android:id="@+id/alreadyLoginTV"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/createAccountBtn"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginTop="@dimen/size_24x"
      style="?attr/textAppearanceBody1"
      android:text="@string/already_have_an_account_log_in"/>
</androidx.constraintlayout.widget.ConstraintLayout>